Fix footer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 .main {
   height: 100vh;
 }
+
+footer {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
